# fastapi-taskqueue

./: .env  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yaml  mkdocs.yml  pyproject.toml
.docker/: Dockerfile  Dockerfile-p
.scripts/: clean.sh
docs/: index.md  reference.md
nginx/: nginx.conf
object_storage/: __init__.py  api.py
object_storage/worker/: celery_app.py  celery_tasks.py  config.py
